--- a/VGA/db/test_VGA.lpc.html
+++ b/VGA/db/test_VGA.lpc.html
@@ -16,15 +16,15 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >VGA640x480</TD>
+<TD >VGA1024x768</TD>
 <TD >14</TD>
-<TD >18</TD>
+<TD >20</TD>
 <TD >0</TD>
-<TD >18</TD>
+<TD >20</TD>
 <TD >33</TD>
-<TD >18</TD>
-<TD >18</TD>
-<TD >18</TD>
+<TD >20</TD>
+<TD >20</TD>
+<TD >20</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -38,6 +38,38 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >clk75|altpll_component|auto_generated</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >5</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >clk75</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
